@@ -5,6 +5,7 @@ CHANGES IN CUPS V1.4.5
 
 	- Documentation fixes (STR #3542, STR #3650)
 	- Localization fixes (STR #3635, STR #3636, STR #3647)
+	- The scheduler did not initialize Kerberos in all cases (STR #3662)
 	- cupsAdminSetServerSettings duplicated Listen and Order lines
 	  (STR #3645)
 	- Added DeviceN colorspace support to the CUPS Raster format (STR #3419)
